--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "sweetalert2": "^11.10.2"
+        "sweetalert2": "^11.10.2",
+        "swiper": "^11.0.5"
     }
 }
